--- a/src/app/(MainCompoments)/Offerdetials/offerdetilas.css
+++ b/src/app/(MainCompoments)/Offerdetials/offerdetilas.css
@@ -10,29 +10,13 @@
   border-radius: 15px 15px 0 0; /* نفس الحواف الدائرية للصورة */
 }
 
-.offers .country-list-linkslist {
-  cursor: pointer;
-  transition: all 2s; /* Fixed transition shorthand */
-  border-radius: 5px;
-  padding: 15px 100px;
-  margin: 0 20px;
-  font-size: 17px;
-  font-weight: 500;
-}
-
-.offers .country-list {
-  left: 50%;
-  top: -55px;
-  transform: translateX(-50%);
-  z-index: 2;
-}
 /* header  */
 .offers .btnoffer {
   border: none;
   font-size: 12px !important;
   font-weight: 400;
   color: #fff;
-  background-color: #336279;
+  background-color: var(--primary-color);
   padding: 10px 50px;
   border-radius: 3px;
 }
