--- a/src/app/(MainCompoments)/world/world.css
+++ b/src/app/(MainCompoments)/world/world.css
@@ -1,8 +1,5 @@
 /* General Styles */
-.countrydetials {
-  background-color: #f9f9f9;
-  padding: 20px;
-}
+
 .country-list .country-list-linkslist {
   cursor: pointer;
   transition: all 2s; /* Fixed transition shorthand */
@@ -19,7 +16,7 @@
   z-index: 2;
 }
 .countrydetials .btnesim {
-  border: 1px solid #336279 !important ;
+  border: 1px solid var(--primary-color) !important ;
 }
 .countrydetials .countydtailsup {
   top: -20px;
@@ -30,7 +27,7 @@
 .btn-day {
   min-width: 80px; /* عرض الزر الأدنى */
   text-align: center;
-  border: 1px solid #336279; /* حدود الزر */
+  border: 1px solid var(--primary-color); /* حدود الزر */
   transition: background-color 0.3s, color 0.3s; /* تأثير الانتقال */
   font-size: 0.9rem; /* حجم النص */
 }
@@ -74,20 +71,20 @@
   padding: 11px;
 }
 .countrydetials .modal-content .contentsimmodelp {
-  color: #626e7b;
+  color: var(--auth-color);
   font-size: 12px;
   font-weight: 400;
 }
 
 .countrydetials .textmodelp {
-  color: #575050;
+  color: var(--secondary-color);
   font-size: 14px;
   font-weight: 400;
 }
 .countrydetials .textmodelpsecond {
   font-size: 10px;
   font-weight: 400;
-  color: #626e7b;
+  color: var(--auth-color);
 }
 
 @media screen and (max-width: 600px) {
@@ -151,7 +148,7 @@
   .countrydetials .textmodelpsecond {
     font-size: 10px !important;
     font-weight: 400;
-    color: #626e7b;
+    color: var(--auth-color);
   }
 }
 
@@ -163,6 +160,6 @@
   }
   .countrydetials .textmodelpsecond {
     font-size: 10px !important;
-    color: #626e7b;
+    color: var(--auth-color);
   }
 }
