--- a/src/app/(MainCompoments)/continents/continents.css
+++ b/src/app/(MainCompoments)/continents/continents.css
@@ -1,50 +1,13 @@
-.continentsheader {
-  background-color: #f9f9f9;
-  padding: 20px 0;
-}
-.continentsheader .country-list {
-  position: absolute;
-  left: 50%;
-  top: -50px;
-  transform: translateX(-50%);
-  z-index: 2;
-}
-.continentsheader .country-list .active1 {
+.continentsheader .country-listbeginall .active1 {
   background-color: white !important;
   color: var(--primary-color) !important; /* لون أخضر عند التفعيل */
 }
-.continentsheader .country-list .country-list-links {
-  cursor: pointer;
-  border-radius: 5px;
-  padding: 15px 80px;
-  margin: 0 20px;
-  font-size: 17px;
-  font-weight: 500;
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
-.continentsheader .countryshow {
-  background-color: #575050;
-  padding: 15px 100px !important;
-  font-size: 17px;
-  font-weight: 200;
-  border-radius: 10px;
-  color: #ffffff;
-  transition: background-color 0.3s ease;
-}
-.continentsheader .countryshow:hover {
-  background-color: var(--primary-color);
-}
 .continentsheader .countryname {
-  color: #626e7b;
-  font-size: 20px;
-  font-weight: 300;
+  color: var(--auth-color) !important ;
+  font-size: var(--font-large) !important;
+  font-weight: 300 !important;
 }
-/* الشاشات الكبيرة */
-@media (min-width: 992px) {
-  .continentsheader .countryname {
-    font-size: 18px;
-  }
-}
+
 @media (min-width: 767px) and (max-width: 1200px) {
   .continentsheader .row {
     display: flex;
@@ -61,63 +24,26 @@
     text-align: center;
   }
 }
-/* التابلت */
-@media (max-width: 991px) and (min-width: 768px) {
- .continentsheader .countryname {
-    font-size: 16px;
-  }
-
-.continentsheader  .country-list .country-list-links {
-    padding: 12px 40px;
-    font-size: 14px;
-  }
-}
-
 /* الموبايل */
 @media (max-width: 767px) {
   .continentsheader .continentsheader {
     padding: 15px;
   }
 
-  .continentsheader .country-listbegin {
-    top: -40px;
-  }
-
- .continentsheader .country-list .country-list-links {
-    padding: 14px 25px;
-    font-size: 12px;
-    margin: 5px 10px;
-  }
-
-.continentsheader  .countryshow {
-    font-size: 14px;
-    padding: 8px 15px;
-  }
-
   .continentsheader .countryname {
-    font-size: 14px;
-    margin-left: 10px;
+    font-size: 15px !important;
+    margin-left: 10px !important;
     margin-right: 8px !important;
   }
 }
 
 /* الشاشات الصغيرة جدًا (350px أو أقل) */
 @media (max-width: 350px) {
- .continentsheader .country-list .country-list-links {
-    padding: 8px 15px;
+  .continentsheader .countryname {
     font-size: 12px;
   }
 
- .continentsheader .countryshow {
-    padding: 15px 50px !important;
-    font-size: 12px;
-  }
-
- .continentsheader .countryname {
-    font-size: 12px;
-  }
-
-.continentsheader  .country-flag img {
+  .continentsheader .country-flag img {
     width: 50px;
     height: 30px;
   }
