--- a/src/app/(MainCompoments)/accountInformation/accountinform.css
+++ b/src/app/(MainCompoments)/accountInformation/accountinform.css
@@ -161,13 +161,20 @@ button.followclose:focus {
 
 .cardinfo ul li {
   padding-bottom: 10px;
-  color: #626e7b !important;
+  color: #626e7b !important ;
   font-size: 17px !important;
   font-weight: 300 !important;
   transition: color 0.3s ease, font-weight 0.3s ease;
 }
+.cardinfo ul li.accountInformationlogout {
+  color: #e14f72 !important;
+}
 
 .cardinfo .active {
+  font-weight: 500 !important;
+  color: #626e7b !important;
+}
+.cardinfo ul li:hover {
   font-weight: 500 !important;
 }
 
