--- a/src/app/(MainCompoments)/OrderSuccess/[id]/ordersucess.css
+++ b/src/app/(MainCompoments)/OrderSuccess/[id]/ordersucess.css
@@ -20,3 +20,8 @@
   font-size: 10px !important;
   font-weight: 400 !important;
 }
+.ordersucess .tajwalh{
+  font-size: 12px !important;
+  font-weight: 600 !important;
+  color: var(--secondary-color);
+}
