--- a/src/app/_Compontents/Navbar/navbar.css
+++ b/src/app/_Compontents/Navbar/navbar.css
@@ -4,7 +4,7 @@
   border-radius: 10px;
 }
 
-li a.nav-link {
+li.nav-item a.nav-link {
   font-size: var(--font-large) !important;
   font-weight: 300 !important;
 }
