--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
   --foreground: #171717;
   --primary-color: #336279; /* اللون الرئيسي */
   --secondary-color: #575050; /* اللون الفرعي */
-  --auth-color: #626e7b; /* اللون الفرعي */
+  --auth-color: #626E7B; /* اللون الفرعي */
   --font-large: 20px;
   --font-medium: 17px;
   --font-small: 14px;
