--- a/src/app/(MainCompoments)/ContactUS/ContactUS.css
+++ b/src/app/(MainCompoments)/ContactUS/ContactUS.css
@@ -3,6 +3,7 @@
   font-weight: 400 !important;
   color: var(--auth-color);
 }
+
 .ContactUS .phone-input-field {
   width: 100% !important;
   background-color: transparent !important;
@@ -18,6 +19,7 @@
   outline: 0 !important;
   box-shadow: 0 0 0 0 transparent !important;
 }
+
 .ContactUS input,
 .ContactUS textarea,
 .ContactUS select {
@@ -44,4 +46,12 @@
 }
 .ContactUS select.custom-select option {
   box-shadow: 0 0 0 0 transparent !important;
+}
+.ContactUS .sucessp{
+  color: var(--primary-color);
+}
+.ContactUS .sucesspline{
+  color: var(--auth-color);
+  font-size: 12px !important;
+  font-weight: 300 !important;
 }
