--- a/src/app/(auth)/Register/register.css
+++ b/src/app/(auth)/Register/register.css
@@ -50,7 +50,7 @@
     padding: 0 15px;
   }
   .registertajwal button.follow {
-    padding: 10px 50px;
+    padding: 10px 100px !important;
   }
 }
 
@@ -61,7 +61,7 @@
   }
   .registertajwal button.follow {
     font-size: 12px;
-    padding: 10px 40px;
+    padding: 10px 100px !important;
   }
   .registertajwal .p_register p {
     font-size: 11px;
