--- a/src/app/(MainCompoments)/Customerservice/Customerservice.css
+++ b/src/app/(MainCompoments)/Customerservice/Customerservice.css
@@ -1,3 +1,8 @@
+.Customerservice .ContactUSph {
+  font-size: 14px !important;
+  font-weight: 500 !important;
+  color: var(--auth-color);
+}
 .Customerservice .ContactUSp {
   font-size: 12px !important;
   font-weight: 400 !important;
