--- a/src/app/_Compontents/Navbar/navbar.css
+++ b/src/app/_Compontents/Navbar/navbar.css
@@ -159,11 +159,11 @@ li.nav-item a.nav-link {
     width: 100px !important;
     height: 50px !important;
   }
-  .offcanvas .nav-item a,
+  .offcanvas .nav-item a.nav-link,
   .nav-item button {
     color: black !important;
-    font-size: 14px !important;
-    font-weight: 500 !important;
+    font-size: 16px !important;
+    font-weight: 400 !important;
   }
   
 
