--- a/src/app/(MainCompoments)/Customerservice/Customerservice.css
+++ b/src/app/(MainCompoments)/Customerservice/Customerservice.css
@@ -67,4 +67,7 @@
   .Customerservice .followll {
     justify-content: center !important;
   }
+  .Customerservice .widthsercive{
+    width: 100% !important;
+  }
 }
