--- a/src/app/(MainCompoments)/Purchase/purchase.css
+++ b/src/app/(MainCompoments)/Purchase/purchase.css
@@ -127,35 +127,8 @@
   white-space: nowrap; /* منع التفاف النص */
 }
 
-/* استجابة للشاشات الصغيرة */
-@media (max-width: 600px) {
-  .discount-container {
-    flex-direction: column; /* تحويل الاتجاه إلى عمودي */
-    align-items: stretch; /* توسيع العناصر لتملأ العرض */
-    gap: 15px; /* زيادة المسافة بين العناصر */
-  }
 
-  .discount-input {
-    width: 100%; /* ملء العرض بالكامل */
-  }
 
-  .apply-btn {
-    width: 100%; /* ملء العرض بالكامل */
-    text-align: center; /* توسيط النص */
-  }
-}
-
-/* استجابة للشاشات الأصغر من 350 بكسل */
-@media (max-width: 350px) {
-  .discount-input::placeholder {
-    font-size: 10px;
-  }
-
-  .apply-btn {
-    font-size: 10px;
-    padding: 8px;
-  }
-}
 
 .compatibility-check {
   margin: 14px auto;
@@ -181,6 +154,24 @@
   max-width: 100%;
   height: auto;
 }
+/* استجابة للشاشات الصغيرة */
+@media (max-width: 600px) {
+  .discount-container {
+    flex-direction: column; /* تحويل الاتجاه إلى عمودي */
+    align-items: stretch; /* توسيع العناصر لتملأ العرض */
+    gap: 15px; /* زيادة المسافة بين العناصر */
+  }
+
+  .discount-input {
+    width: 100%; /* ملء العرض بالكامل */
+  }
+
+  .apply-btn {
+    width: 100%; /* ملء العرض بالكامل */
+    text-align: center; /* توسيط النص */
+  }
+}
+
 
 /* تحسين التصميم للشاشات الصغيرة */
 @media (max-width: 530px) {
@@ -190,17 +181,19 @@
   }
 
   .payement {
-    padding: 5px; /* فراغ بين العناصر */
+    padding: 1px 0px !important
+    ; /* فراغ بين العناصر */
   }
 }
-
+/* استجابة للشاشات الأصغر من 350 بكسل */
 @media (max-width: 350px) {
-  .payement img {
-    width: 90% !important; /* تقليل الحجم لتناسب الشاشات الصغيرة جدًا */
-    height: 40px !important;
+  .discount-input::placeholder {
+    font-size: 10px;
   }
 
-  .payement {
-    padding: 5px; /* تقليل المسافات بين العناصر */
+  .apply-btn {
+    font-size: 10px;
+    padding: 8px;
   }
 }
+
