--- a/src/app/(MainCompoments)/Orders/[id]/Orderdetilas.css
+++ b/src/app/(MainCompoments)/Orders/[id]/Orderdetilas.css
@@ -1,4 +1,3 @@
-
 .Ordersdetails .cardinfo li.active {
   font-weight: 500;
 }
@@ -9,18 +8,24 @@
 .Ordersdetails .cardinfo span {
   font-size: 12px !important;
   font-weight: 300 !important;
-  color:var( --auth-color);
+  color: var(--auth-color);
   margin: 0 !important;
   padding: 0 !important;
 }
+button.btnback{
+  background-color: var(--primary-color) !important;
+  border: none !important;
+  font-size: 12px !important;
+  font-weight: 500 !important;
+}
 .Ordersdetails .cardinfo h6 {
   font-weight: 700 !important;
-  color: var( --auth-color);
+  color: var(--auth-color);
   font-size: 17px !important;
 }
 .Ordersdetails .cardinfo ul li {
   padding-bottom: 10px;
-  color: var( --auth-color) !important ;
+  color: var(--auth-color) !important ;
   font-size: 17px !important;
   font-weight: 300 !important;
   transition: color 0.3s ease, font-weight 0.3s ease;
@@ -31,7 +36,7 @@
 
 .Ordersdetails .cardinfo .active {
   font-weight: 500 !important;
-  color: var( --auth-color) !important;
+  color: var(--auth-color) !important;
 }
 .Ordersdetails .cardinfo ul li:hover {
   font-weight: 500 !important;
@@ -63,9 +68,8 @@
   font-size: 10px !important;
   font-weight: 400 !important;
 }
-.Ordersdetails .tajwalh{
+.Ordersdetails .tajwalh {
   font-size: 12px !important;
   font-weight: 600 !important;
   color: var(--secondary-color);
 }
-
