--- a/src/app/_Compontents/Footer/footer.css
+++ b/src/app/_Compontents/Footer/footer.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
   background-color: #d9dee44d;
   color: var(--secondary-color);
 }
@@ -19,4 +19,4 @@
 }
 .allfooter span {
   border-bottom: 1px solid white;
-}
+} */
