--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
   --primary-color: #336279; /* اللون الرئيسي */
   --secondary-color: #575050; /* اللون الفرعي */
   --auth-color: #626e7b; /* اللون الفرعي */
+  --font-largeNavbar:20px;
   --font-large: 18px;
   --font-medium: 17px;
   --font-small: 14px;
