--- a/src/app/_Compontents/Navbar/navbar.css
+++ b/src/app/_Compontents/Navbar/navbar.css
@@ -1,11 +1,11 @@
-.resgister {
+.btnresgister .resgister {
   background-color: var(--primary-color) !important;
   padding: 8px 50px !important;
   border-radius: 10px;
 }
 
-li.nav-item button.nav-link {
-  font-size: var(--font-large) !important;
+li.nav-item button.nav-link ,li.nav-item a.nav-link {
+  font-size: var(--font-largeNavbar) !important;
   font-weight: 300 !important;
 }
 
@@ -72,7 +72,7 @@ li.nav-item button.nav-link {
     outline: none !important;
     box-shadow: 0 0 0 0 transparent !important;
   }
-  .offcanvas .nav-item button,
+  .offcanvas .nav-item button,li.nav-item a.nav-link,
   .nav-item button {
     color: black !important;
     font-size: 16px !important;
@@ -82,10 +82,7 @@ li.nav-item button.nav-link {
     color: black !important;
     font-size: 16px !important;
   }
-  .offcanvas .nav-item a:hover,
-  .nav-item button:hover {
-    color: var(--primary-color) !important;
-  }
+ 
   .nav-item .iconoffcenspan {
     font-size: 16px !important;
     font-weight: 500 !important;
@@ -140,9 +137,7 @@ li.nav-item button.nav-link {
     padding: 6px 20px !important;
   }
 
-  .offcanvas .nav-item a:active {
-    color: var(--primary-color) !important;
-  }
+  
 }
 
 @media (max-width: 768px) {
@@ -163,7 +158,7 @@ li.nav-item button.nav-link {
     width: 100px !important;
     height: 50px !important;
   }
-  .offcanvas .nav-item button.nav-link,
+  .offcanvas .nav-item button.nav-link, .offcanvas .nav-item a.nav-link,
   .nav-item button {
     color: black !important;
     font-size: 16px !important;
