--- a/src/app/_Compontents/Navbar/navbar.css
+++ b/src/app/_Compontents/Navbar/navbar.css
@@ -90,7 +90,7 @@ li.nav-item a.nav-link {
     font-weight: 500 !important;
   }
 
-  .offcanvas .nav-item .dropdown-item span {
+  .offcanvas .nav-item .dropdown-item span ,.offcanvas .dropdown-item .fa-chevron-left {
     font-size: 12px !important;
     color: var(--secondary-color) !important;
   }
