--- a/src/app/(MainCompoments)/continents/continents.css
+++ b/src/app/(MainCompoments)/continents/continents.css
@@ -1,5 +1,5 @@
 .continentsheader .country-listbeginall .active1 {
-  background-color: white !important;
+  background-color: #F9F9F9 !important;
   color: var(--primary-color) !important; /* لون أخضر عند التفعيل */
 }
 .continentsheader .countryname {
