--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,7 +61,8 @@ a {
 }
 .country-listbeginall .country-list-links {
   cursor: pointer;
-  border-radius: 5px !important;
+  border-top-left-radius: 5px !important;
+  border-top-right-radius: 5px !important;
   padding: 15px 80px !important;
   margin: 0 20px !important;
   font-size: var(--font-medium) !important;
@@ -97,7 +98,7 @@ a {
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .country-listbeginall .country-list-links {
-    padding: 12px 35px !important;
+    padding: 14px 35px !important;
     font-size: var(--font-small);
   }
 }
