--- a/src/app/(MainCompoments)/continents/continents.css
+++ b/src/app/(MainCompoments)/continents/continents.css
@@ -1,50 +1,15 @@
-.continentsheader .country-listbeginall .active1 {
-  background-color: #F9F9F9 !important;
-  color: var(--primary-color) !important; /* لون أخضر عند التفعيل */
-}
 .continentsheader .countryname {
   color: var(--auth-color) !important ;
   font-size: var(--font-large) !important;
   font-weight: 300 !important;
 }
 
-@media (min-width: 767px) and (max-width: 1200px) {
-  .continentsheader .row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .continentsheader .col-md-3 {
-    flex: 0 0 50%; /* عرض العنصر يكون 50% من عرض الحاوية */
-    max-width: 50%;
-  }
-
-  .continentsheader .col-md-3.text-center {
-    text-align: center;
-  }
-}
-/* الموبايل */
-@media (max-width: 767px) {
-  .continentsheader .continentsheader {
-    padding: 15px;
+@media (max-width: 850px) {
+  .continentsheader .country-listbegin {
+    top: -40px;
   }
 
   .continentsheader .countryname {
-    font-size: 15px !important;
-    margin-left: 10px !important;
-    margin-right: 8px !important;
-  }
-}
-
-/* الشاشات الصغيرة جدًا (350px أو أقل) */
-@media (max-width: 350px) {
-  .continentsheader .countryname {
-    font-size: 12px;
-  }
-
-  .continentsheader .country-flag img {
-    width: 50px;
-    height: 30px;
+    font-size: 17px !important;
   }
 }
