--- a/src/app/(MainCompoments)/world/world.css
+++ b/src/app/(MainCompoments)/world/world.css
@@ -1,12 +1,8 @@
 /* General Styles */
-
 .countrydetials .btnesim {
   border: 1px solid var(--primary-color) !important ;
 }
-.countrydetials .country-listbeginall .active1 {
-  background-color: #f9f9f9 !important;
-  color: var(--primary-color) !important; /* لون أخضر عند التفعيل */
-}
+
 .countrydetials .countydtailsup {
   top: -20px;
   width: 95%;
@@ -74,6 +70,12 @@
   font-size: 10px;
   font-weight: 400;
   color: var(--auth-color);
+}
+@media (min-width: 1200px) {
+  .col-xl-custom {
+    flex: 0 0 20%; /* كل بطاقة تأخذ 20% من العرض */
+    max-width: 20%;
+  }
 }
 
 @media screen and (max-width: 600px) {
