--- a/src/app/(MainCompoments)/accountInformation/accountinform.css
+++ b/src/app/(MainCompoments)/accountInformation/accountinform.css
@@ -1,13 +1,9 @@
-/* General Styles */
-
 .accountInformation .cardinfo li.active {
   font-weight: 500;
 }
-
 .accountInformation .accountInformationp {
   color: var(--primary-color);
 }
-
 /* Modal Styles */
 .modalaccountInformation {
   position: fixed;
@@ -21,7 +17,6 @@
   align-items: center;
   opacity: 0;
   visibility: hidden;
- 
   transition: opacity 0.3s ease, visibility 0.3s ease;
   z-index: 1000;
 }
@@ -35,11 +30,10 @@
   background: white;
   padding: 20px;
   border-radius: 8px;
-  width: 400px;
+  width: 330px;
   text-align: center;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   animation: slideDown 0.4s ease;
-  margin:0px 20px !important;
 }
 
 /* Modal Animation */
@@ -53,17 +47,9 @@
     opacity: 1;
   }
 }
-
-/* Modal Buttons */
-.modalaccountInformation .modal-content button {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
 .modalaccountInformation button.follow {
   background-color: var(--primary-color) !important;
-  padding: 10px 100px; /* Adjust button padding */
+  padding: 10px; /* Adjust button padding */
   color: #f1f3f6;
   font-size: 13px;
   font-weight: 700;
@@ -72,7 +58,7 @@
 }
 .modalaccountInformation button.followclose {
   background-color: var(--auth-color) !important;
-  padding: 10px 100px; /* Adjust button padding */
+  padding: 10px;
   color: #f1f3f6;
   font-size: 13px;
   font-weight: 700;
@@ -90,26 +76,7 @@ button.followclose:focus {
   box-shadow: 0 0 0 0 transparent !important;
   color: #ffffff !important;
 }
-.swal-small-popup {
-  max-width: 300px;
-  padding: 15px;
-  border-radius: 10px;
-}
-
-.swal-small-title {
-  font-size: 16px;
-  font-weight: bold;
-  color: var(--primary-color);
-}
-
-.swal-small-content {
-  font-size: 14px;
-  color: #575050;
-  text-align: center;
-}
 .inputchange {
-  width: 99% !important;
-  background-color: transparent !important;
   border: none !important;
   outline: none !important;
   background-color: #f9f9f9 !important;
