--- a/src/app/(MainCompoments)/ContactUS/ContactUS.css
+++ b/src/app/(MainCompoments)/ContactUS/ContactUS.css
@@ -47,11 +47,27 @@
 .ContactUS select.custom-select option {
   box-shadow: 0 0 0 0 transparent !important;
 }
-.ContactUS .sucessp{
+.ContactUS .sucessp {
   color: var(--primary-color);
 }
-.ContactUS .sucesspline{
+.ContactUS .sucesspline {
   color: var(--auth-color);
   font-size: 12px !important;
   font-weight: 300 !important;
+}
+@media (max-width: 1024px) {
+  .ContactUS .row {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .ContactUS .col-md-3,
+  .ContactUS .col-md-6 {
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .ContactUS .ContactUSp {
+    padding: 15px;
+  }
 }
