--- a/src/app/(MainCompoments)/Customerservice/Customerservice.css
+++ b/src/app/(MainCompoments)/Customerservice/Customerservice.css
@@ -60,6 +60,17 @@
   font-size: 12px !important;
   font-weight: 300 !important;
 }
+@media (min-width: 765px) and (max-width: 1400px) {
+  .Customerservice .row.mediatab {
+    flex-direction: column;
+    align-items: center;
+  }
+  .Customerservice .mediatab .col-md-4 {
+    width: 100%;
+    max-width: 400px;
+  }
+}
+
 @media (max-width: 600px) {
   .Customerservice .messageCustomerservice {
     width: 100% !important;
@@ -67,7 +78,7 @@
   .Customerservice .followll {
     justify-content: center !important;
   }
-  .Customerservice .widthsercive{
+  .Customerservice .widthsercive {
     width: 70% !important;
   }
 }
