--- a/src/app/(MainCompoments)/Customerservice/Customerservice.css
+++ b/src/app/(MainCompoments)/Customerservice/Customerservice.css
@@ -70,6 +70,12 @@
     max-width: 400px;
   }
 }
+@media (min-width: 600px) and (max-width: 1400px) {
+  .Customerservice .messageCustomerservice{
+  width: 90% !important;
+  }
+  
+}
 
 @media (max-width: 600px) {
   .Customerservice .messageCustomerservice {
