--- a/src/app/_Compontents/Header/header.css
+++ b/src/app/_Compontents/Header/header.css
@@ -3,17 +3,17 @@
   background-position: center center;
   background-size: cover;
 }
-.content-center h1 {
+.home .content-center h1 {
   font-size: 40px !important ;
   font-weight: 700 !important;
 }
-.content-center p {
+.home .content-center p {
   font-size: var(--font-largeNavbar) !important ;
   font-weight: 300 !important;
   margin-bottom: 30px !important;
 }
 
-.search-bar {
+.home .search-bar {
   display: flex;
   align-items: center;
   border: 1px solid #ccc;
@@ -25,7 +25,7 @@
   margin: 0 auto;
 }
 
-.search-bar input {
+.home .search-bar input {
   border: none;
   outline: none;
   flex: 1;
@@ -34,7 +34,7 @@
   background-color: transparent;
 }
 
-.search-button {
+.home .search-button {
   border: none;
   background: none;
   cursor: pointer;
@@ -43,14 +43,14 @@
   padding: 2px 10px;
 }
 
-.text {
+.home .text {
   color: white;
   font-weight: bold;
   position: relative;
   z-index: 2;
 }
 
-.text::after {
+.home .text::after {
   content: "";
   width: 100%;
   height: 20px;
@@ -62,7 +62,7 @@
   z-index: -1;
 }
 
-.search-bar button {
+.home .search-bar button {
   display: block;
   margin: 0px auto;
   padding: 10px 20px;
@@ -70,25 +70,28 @@
   font-size: 16px;
   border-radius: 5px;
 }
+.home input {
+  font-size: 15px !important;
+  color: var(--auth-color) !important;
+}
 
 @media (max-width: 768px) {
-  .search-bar {
+  .home .search-bar {
     width: 90%;
   }
 
-  button {
+  .home button {
     font-size: 14px;
     padding: 8px 15px;
   }
 }
 
 @media (max-width: 500px) {
-  .content-center h1 {
+  .home .content-center h1 {
     font-size: 33px !important ;
   }
 
-
-  .search-bar button {
+  .home .search-bar button {
     font-size: 12px;
     padding: 5px 10px;
   }
