--- a/src/app/(auth)/Login/login.css
+++ b/src/app/(auth)/Login/login.css
@@ -1,8 +1,7 @@
-/* General Styles */
 .login {
   width: 100%;
-  max-width: 500px; /* Limit max-width for large screens */
-  margin: 0 auto; /* Center the container */
+  max-width: 500px;
+  margin: 0 auto;
 }
 .login .imagelogin {
   width: 408px !important;
@@ -38,7 +37,7 @@
 }
 .login button.follow {
   background-color: var(--primary-color) !important;
-  padding: 10px 100px; /* Adjust button padding */
+  padding: 10px 100px;
   color: #f1f3f6;
   font-size: 13px;
   font-weight: 700;
@@ -51,7 +50,7 @@
 }
 .login button.back {
   background-color: var(--auth-color) !important;
-  padding: 10px 80px; /* Adjust button padding */
+  padding: 10px 80px;
   color: #f1f3f6;
   font-size: 13px;
   font-weight: 700;
@@ -70,19 +69,11 @@
 }
 
 @media screen and (max-width: 576px) {
-  .login input,
-  .login .phone-input-field {
-    padding: 10px 12px !important;
-  }
   .login button.follow {
     font-size: 12px;
     padding: 10px 100px;
   }
   .login .p-login p {
     font-size: 11px;
-  }
-  .login img {
-    max-width: 100%;
-    height: auto;
   }
 }
