--- a/src/app/(MainCompoments)/accountInformation/accountinform.css
+++ b/src/app/(MainCompoments)/accountInformation/accountinform.css
@@ -47,6 +47,23 @@
   padding: 5px 30px;
   border-radius: 5px;
 }
+.changeinfo .deleteacount {
+  font-size: 16px !important;
+  font-weight: 600 !important;
+  color: var(--secondary-color) !important;
+}
+.changeinfo .deleteacountp {
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  color: var(--secondary-color) !important;
+}
+.changeinfo .deleteacountbtn {
+  font-size: 12px !important;
+  font-weight: 400 !important;
+  border: none !important;
+  background-color: #e14f72 !important;
+  padding: 10px 100px !important;
+}
 
 /* Responsive Design */
 @media (max-width: 850px) {
