--- a/src/app/(MainCompoments)/accountInformation/accountinform.css
+++ b/src/app/(MainCompoments)/accountInformation/accountinform.css
@@ -165,3 +165,32 @@ button.followclose:focus {
   background-color: #ddd;
   color: #333;
 }
+/* swal */
+.swal-popup {
+  font-family: "Cairo", sans-serif;
+  border-radius: 12px;
+  padding: 2px 10px 20px 10px;
+}
+
+.swal-title {
+  font-size: 16px !important;
+  font-weight: bold;
+  color: var(--secondary-color) !important;
+}
+
+.swal-confirm {
+  font-size: 16px !important;
+  font-weight: 600 !important;
+  padding: 10px 50px !important;
+  border-radius: 8px !important;
+  background: #e14f72 !important;
+  border: none !important;
+}
+
+.swal-cancel {
+  font-size: 15px !important;
+  padding: 10px 60px !important;
+  border-radius: 10px !important;
+  background: #6c757d !important;
+  border: none !important;
+}
