--- a/src/app/(MainCompoments)/accountInformation/accountinform.css
+++ b/src/app/(MainCompoments)/accountInformation/accountinform.css
@@ -166,19 +166,19 @@ button.followclose:focus {
   color: #333;
 }
 /* swal */
-.swal-popup {
+.swal-popupacount {
   font-family: "Cairo", sans-serif;
   border-radius: 12px;
   padding: 2px 10px 20px 10px;
 }
 
-.swal-title {
+.swal-titleacount {
   font-size: 16px !important;
   font-weight: bold;
   color: var(--secondary-color) !important;
 }
 
-.swal-confirm {
+.swal-confirmacount {
   font-size: 16px !important;
   font-weight: 600 !important;
   padding: 10px 50px !important;
@@ -187,7 +187,7 @@ button.followclose:focus {
   border: none !important;
 }
 
-.swal-cancel {
+.swal-cancelacount {
   font-size: 15px !important;
   padding: 10px 60px !important;
   border-radius: 10px !important;
