--- a/src/app/(auth)/Register/Otp/otp.css
+++ b/src/app/(auth)/Register/Otp/otp.css
@@ -44,7 +44,7 @@
 }
 .registerotp .imgcover {
   width: 240px !important;
-  height: 260px !important;
+  height: auto !important;
 }
 
 /* Responsive Adjustments */
