--- a/src/app/(auth)/ForgetPassword/ResetPass/resetpass.css
+++ b/src/app/(auth)/ForgetPassword/ResetPass/resetpass.css
@@ -44,7 +44,7 @@
 }
 .resetPassword .imgcover {
   width: 240px !important;
-  height: 260px !important;
+  height: auto !important;
 }
 
 /* Responsive Adjustments */
