--- a/src/app/(MainCompoments)/Offers/offers.css
+++ b/src/app/(MainCompoments)/Offers/offers.css
@@ -6,7 +6,7 @@
 
 .offer img {
   display: block; /* إزالة الفراغات أسفل الصورة */
-  width: 100%; /* جعل الصورة تغطي العرض بالكامل */
+  width: 100% !important; /* جعل الصورة تغطي العرض بالكامل */
   border-radius: 12px 12px 0 0; /* نفس الحواف الدائرية للصورة */
 }
 
