--- a/src/app/(MainCompoments)/Helpcenter/Helpcenter.css
+++ b/src/app/(MainCompoments)/Helpcenter/Helpcenter.css
@@ -7,69 +7,49 @@
 .Helpcenter .search-bar {
   display: flex;
   align-items: center;
-  padding: 4px;
   border-radius: 10px;
   width: 100%;
   max-width: 550px;
+  height: 55px;
   background-color: #ffffff;
-  box-shadow: 5px 5px 10px 10px white;
   margin: 0 auto;
 }
-
 .Helpcenter .search-bar input {
   border: none;
   outline: none;
   flex: 1;
-  padding: 5px;
+  padding: 10px;
   font-size: 16px;
   background-color: #ffffff;
+  color: var(--auth-color);
+  text-align: right;
+  border-radius: 5px;
+}
+.Helpcenter .search-bar input::placeholder {
+  font-size: 13px !important;
+  font-weight: 300 !important;
 }
 
 .Helpcenter .search-button {
   border: none;
-  background: #ffffff;
+  background: transparent;
   cursor: pointer;
   color: #666;
-  font-size: 18px;
-  padding: 2px 10px;
+  font-size: 23px;
+  padding: 20px;
 }
 
-.home .text {
-  color: white;
-  font-weight: bold;
-  position: relative;
-  z-index: 2;
-}
-
-.Helpcenter .text::after {
-  content: "";
-  width: 100%;
-  height: 20px;
+.Helpcenter .Helpcenterpsearch {
   background-color: var(--primary-color);
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: -1;
-}
-
-.Helpcenter .search-bar button {
-  display: block;
-  margin: 0px auto;
-  padding: 10px 20px;
-  background-color: #ffffff;
-  font-size: 16px;
-  border-radius: 5px;
-}
-.Helpcenter input {
-  font-size: 15px !important;
-  color: var(--auth-color) !important;
-}
-.Helpcenter .search-bar .Helpcenterpsearch{
-    background-color: var(--primary-color);
-    padding: 14px 30px !important;
-    font-size: 13px !important;
-    font-weight: 300 !important;
-    border-top-left-radius: 10px ;
-    border-bottom-left-radius: 10px ;
+  margin-top: 17px;
+  padding: 25px 30px;
+  font-size: 15px;
+  font-weight: 400;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
