--- a/src/app/(MainCompoments)/Helpcenter/Helpcenter.css
+++ b/src/app/(MainCompoments)/Helpcenter/Helpcenter.css
@@ -43,8 +43,8 @@
   background-color: var(--primary-color);
   margin-top: 17px;
   padding: 25px 30px;
-  font-size: 15px;
-  font-weight: 400;
+  font-size: 13px !important;
+  font-weight: 500;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   color: #ffffff;
